Fix display of drag gap and mystified name (gm view) in encounter view popouts (#4342)

--- a/src/styles/ui/_combat.scss
+++ b/src/styles/ui/_combat.scss
@@ -1,20 +1,10 @@
-#combat {
-    #combat-round {
-        .encounters {
-            h3 {
-                font-size: var(--font-size-16);
-                font-weight: 500;
-            }
-        }
+.combat-sidebar {
+    // The gap left by a combatant being dragged to a new position
+    .drag-gap {
+        visibility: hidden;
     }
-    #combat-tracker {
-        // The gap left by a combatant being dragged to a new position
-        .drag-gap {
-            visibility: hidden;
-        }
 
-        .hidden-name .token-name h4 {
-            color: var(--color-text-light-7);
-        }
+    .hidden-name .token-name h4 {
+        color: var(--color-text-light-7);
     }
 }
